test: refactor to @BeforeAll + @Order, expand coverage to 11 cases